--- a/page10.html
+++ b/page10.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Artículos JCR</title>
+    <title>Contacto</title>
     <script src="https://kit.fontawesome.com/286f6b3460.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
@@ -18,8 +18,8 @@
           <div class="d-flex flex-column col-3 bg-dark h-100 m-0 p-0">
 
             <div class="text-center px-3 py-5 mx-0 mt-3 fs-1 border-bottom border-light border-5">
-              <p>Artículos JCR</p>
-              <i class="fa-solid fa-file-lines fs-1 mt-3"></i>
+              <p>Contacto</p>
+              <i class="fa-solid fa-address-card fs-1 mt-3"></i>  
             </div>
 
             <div class="h-100 d-flex align-items-end text-center p-0 m-0 fs-5 h-100">
@@ -35,7 +35,7 @@
 
           <!--Barra documento-->
           <div class="col-9 h-100 m-0 p-0 text-end">
-            <iframe id="iframeid" style="padding: 0; margin: 0; scrollbar-width: none;" width="80%" height="100%" src="https://docs.google.com/document/d/e/2PACX-1vRg0v8_Ft1RG3KRJAiwdFmYxVctSJKuD8eVewK9452EdXJ1Cq4OKwyU83BwjcPrcQ/pub?embedded=true"></iframe>
+            <iframe id="iframeid" style="padding: 0; margin: 0; scrollbar-width: none;" width="80%" height="100%" src="https://docs.google.com/document/d/e/2PACX-1vQEwS072b3UnVpb428FlxDtRjORqBmpEBgcrZB9Cf6_Uu0UJCoYf1LvVIT4Ely9AA/pub?embedded=true"></iframe>
           </div>
 
         </div>
