--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,9 +28,10 @@
             </div>
 
             <div class="col-12 col-md-3 text-center">
-                <p class="text-secondary fs-3">Visitas</p>
-                <span class="badge text-bg-light fs-3">
-                </span>  
+                <p class="text-secondary fs-3 m-0">Visitas</p>
+                <!--Prueba contador-->
+                <a href='https://www.symptoma.es/'>Symptoma</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=3c1961bbf062dc6997f5061759ab3f52fd80cca3'></script>
+                <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/957925/t/5"></script> 
             </div>
 
         </div>
