--- a/page08.html
+++ b/page08.html
@@ -18,7 +18,7 @@
         <div class="row w-100 h-100 m-0 p-0 text-light">
 
           <!--Barra negra-->
-          <div class="d-flex flex-column col-3 bg-dark h-100 m-0 p-0">
+          <div class="d-flex flex-column col-3 pantone-azul h-100 m-0 p-0">
 
             <div class="text-center px-3 py-5 mx-0 mt-3 fs-1 border-bottom border-light border-5">
               <p>Asesorías</p>
@@ -26,7 +26,7 @@
             </div>
 
             <div class="h-100 d-flex align-items-end text-center p-0 m-0 fs-5 h-100">
-              <div id="regresar" class="bg-dark w-100 m-0">
+              <div id="regresar" class="pantone-azul w-100 m-0">
                 <a style="display: block;" class="w-100 h-100 p-3" href="index.html">
                   <i class="fa-solid fa-chevron-left"></i>
                   <span class="ps-3">Regresar</span>
