--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <!--Barra principal-->
-    <div class="container-fluid bg-dark p-3">
+    <div class="container-fluid pantone-azul p-3">
         <div class="row align-items-center justify-content-evenly">
 
             <div class="col-12 col-md-3 text-center">
@@ -41,7 +41,7 @@
     <div class="container mt-5 text-center botonera">
         <div class="row text-light gy-5 justify-content-center">
             
-            <div id="element01" class="p-0 mx-3 bg-dark rounded-3 col-5 col-lg-2">
+            <div id="element01" class="p-0 mx-3 pantone-verde rounded-3 col-5 col-lg-2">
                 <a href="page01.html" class="d-flex align-items-center justify-content-center enlace">
                     <div class="p-3">
                         <p class="m-0">Artículos JCR</p>
@@ -50,7 +50,7 @@
                 </a>
             </div>
             
-            <div id="element02" class="p-0 mx-3 bg-dark rounded-3 col-5 col-lg-2">
+            <div id="element02" class="p-0 mx-3 pantone-verde rounded-3 col-5 col-lg-2">
                 <a href="page02.html" class="d-flex align-items-center justify-content-center enlace">
                     <div class="p-3">
                         <p class="m-0">Libros y Capítulos</p>
@@ -59,7 +59,7 @@
                 </a>
             </div>
 
-            <div id="element03" class="p-0 mx-3 bg-dark rounded-3 col-5 col-lg-2">
+            <div id="element03" class="p-0 mx-3 pantone-verde rounded-3 col-5 col-lg-2">
                 <a href="page03.html" class="d-flex align-items-center justify-content-center enlace">
                     <div class="p-3">
                         <p class="m-0">Desarrollos Tecnológicos</p>
@@ -68,7 +68,7 @@
                 </a>
             </div>
 
-            <div id="element04" class="p-0 mx-3 bg-dark rounded-3 col-5 col-lg-2">
+            <div id="element04" class="p-0 mx-3 pantone-verde rounded-3 col-5 col-lg-2">
                 <a href="page04.html" class="d-flex align-items-center justify-content-center enlace">
                     <div class="p-3">
                         <p class="m-0">Tesis Dirigidas</p>
@@ -77,7 +77,7 @@
                 </a>
             </div>
 
-            <div id="element05" class="p-0 mx-3 bg-dark rounded-3 col-5 col-lg-2">
+            <div id="element05" class="p-0 mx-3 pantone-verde rounded-3 col-5 col-lg-2">
                 <a href="page05.html" class="d-flex align-items-center justify-content-center enlace">
                     <div class="p-3">
                         <p class="m-0">Artículos de difusión</p>       
@@ -86,7 +86,7 @@
                 </a>
             </div>
 
-            <div id="element06" class="p-0 mx-3 bg-dark rounded-3 col-5 col-lg-2">
+            <div id="element06" class="p-0 mx-3 pantone-verde rounded-3 col-5 col-lg-2">
                 <a href="page06.html" class="d-flex align-items-center justify-content-center enlace">
                     <div class="p-3">
                         <p class="m-0">Clases</p>        
@@ -95,7 +95,7 @@
                 </a>
             </div>
 
-            <div id="element07" class="p-0 mx-3 bg-dark rounded-3 col-5 col-lg-2">
+            <div id="element07" class="p-0 mx-3 pantone-verde rounded-3 col-5 col-lg-2">
                 <a href="page07.html" class="d-flex align-items-center justify-content-center enlace">
                     <div class="p-3">
                         <p class="m-0">Videos</p>       
@@ -104,7 +104,7 @@
                 </a>
             </div>
 
-            <div id="element08" class="p-0 mx-3 bg-dark rounded-3 col-5 col-lg-2">
+            <div id="element08" class="p-0 mx-3 pantone-verde rounded-3 col-5 col-lg-2">
                 <a href="page08.html" class="d-flex align-items-center justify-content-center enlace">
                     <div class="p-3">
                         <p class="m-0">Asesorías</p>               
@@ -113,7 +113,7 @@
                 </a>
             </div>
 
-            <div id="element09" class="p-0 mx-3 bg-dark rounded-3 col-5 col-lg-2">
+            <div id="element09" class="p-0 mx-3 pantone-verde rounded-3 col-5 col-lg-2">
                 <a href="page09.html" class="d-flex align-items-center justify-content-center enlace">
                     <div class="p-3">
                         <p class="m-0">Tienda virtual</p>            
@@ -122,7 +122,7 @@
                 </a>
             </div>
 
-            <div id="element10" class="p-0 mx-3 bg-dark rounded-3 col-5 col-lg-2">
+            <div id="element10" class="p-0 mx-3 pantone-verde rounded-3 col-5 col-lg-2">
                 <a href="page10.html" class="d-flex align-items-center justify-content-center enlace">
                     <div class="p-3">
                         <p class="m-0">Contacto</p>           
@@ -134,7 +134,7 @@
     </div>
 
     <!--footer-->
-    <div class="container-fluid bg-dark text-center text-light p-3 footer">
+    <div class="container-fluid pantone-azul text-center text-light p-3 footer">
         <p>Derechos reservados ©1997 - 2022. Universidad de Guadalajara</p>
     </div>
 
