boton regresar actualizado a todas las paginas

--- a/page10.html
+++ b/page10.html
@@ -25,13 +25,21 @@
               <i class="fa-solid fa-address-card fs-1 mt-3"></i>  
             </div>
 
-            <div class="h-100 d-flex align-items-end text-center p-0 m-0 fs-5 h-100">
-              <div id="regresar" class="pantone-azul w-100 m-0">
+            <div class=" justify-content-between h-100 d-flex flex-column text-center p-0 m-0 fs-5 h-100">
+
+              <!--Boton regresar-->
+              <div id="regresar" class="border-bottom border-light border-5 text-warning fw-bold py-5 pantone-azul w-100 m-0">
                 <a style="display: block;" class="w-100 h-100 p-3" href="index.html">
                   <i class="fa-solid fa-chevron-left"></i>
                   <span class="ps-3">Regresar</span>
                 </a>
               </div>
+
+              <!--Logo-->
+              <div class="p-5">
+                <img style="max-width:100%;" src="img/logoudg.png">
+              </div>
+
             </div>
 
           </div>
