--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div id="element05" class="p-0 mx-3 pantone-verde rounded-3 col-5 col-lg-2">
                 <a href="page05.html" class="d-flex align-items-center justify-content-center enlace">
                     <div class="p-3">
-                        <p class="m-0">Artículos de difusión</p>       
+                        <p class="m-0">Actividades de fortalecimiento, difusión y divulgación</p>       
                         <i class="fa-solid fa-laptop-file fs-1 mt-3"></i>         
                     </div>
                 </a>
